--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@angular/core": "^17.3.1",
     "lit": "^3.1.2"
   },
   "devDependencies": {
